--- a/message.html
+++ b/message.html
@@ -33,6 +33,9 @@ else{
 </script>
 
 <style type='text/css'>
+	body {
+		background-color: #fff;
+	}
 	#message {
 		border : none;
 		font-size : 13px;
